ci: add release stage with GitLab CLI
- Add release stage that runs on main branch and creates tags automatically (v0.$CI_PIPELINE_IID)
- Publish stage runs on any git tag
- Uses registry.gitlab.com/gitlab-org/cli:latest for release job

Follows GitLab release CI/CD examples pattern:
https://docs.gitlab.com/user/project/releases/release_cicd_examples/#create-a-release-when-a-commit-is-merged-to-the-default-branch

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,13 +1,14 @@
 stages:
   - build
   - docker
+  - release
 
 variables:
   IMAGE_NAME: unifi-network-mcp
 
 build:
   stage: build
-  image: golang:1.23-alpine
+  image: harbor.dataknife.net/dockerhub/library/golang:1.23-alpine
   script:
     - apk add --no-cache make git
     - make build
@@ -48,7 +49,24 @@ publish:
         --local dockerfile=. \
         $OUTPUT_FLAGS
   rules:
-    - if: '$CI_COMMIT_BRANCH == "main"'
-    - if: '$CI_COMMIT_TAG'
+    - if: '$CI_COMMIT_TAG'  # Run on any git tag
+  tags:
+    - kubernetes
+
+release:
+  stage: release
+  image: registry.gitlab.com/gitlab-org/cli:latest
+  rules:
+    - if: $CI_COMMIT_TAG
+      when: never                                  # Do not run this job when a tag is created manually
+    - if: $CI_COMMIT_BRANCH == $CI_DEFAULT_BRANCH  # Run this job when commits are pushed or merged to the default branch
+  script:
+    - |
+      echo "Creating release for commit $CI_COMMIT_SHORT_SHA"
+      echo "Release will create tag automatically"
+  release:                               # See https://docs.gitlab.com/ee/ci/yaml/#release for available properties
+    tag_name: 'v0.$CI_PIPELINE_IID'     # The version is incremented per pipeline
+    description: 'Release v0.$CI_PIPELINE_IID'
+    ref: '$CI_COMMIT_SHA'                # The tag is created from the pipeline SHA
   tags:
     - kubernetes
